ml-app/overlays/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlgateway-audit
  namespace: mlops-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: tests
    http:
      paths:
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: mlgateway
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlgateway-healthz
  namespace: mlops-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: tests
    http:
      paths:
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: mlgateway
            port:
              number: 80
